--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
         "@radix-ui/react-label": "^2.1.2",
         "@radix-ui/react-navigation-menu": "^1.2.5",
         "@radix-ui/react-popover": "^1.1.7",
-        "@radix-ui/react-select": "^2.1.6",
+        "@radix-ui/react-scroll-area": "^1.2.5",
+        "@radix-ui/react-select": "^2.2.2",
         "@radix-ui/react-separator": "^1.1.3",
         "@radix-ui/react-slot": "^1.2.0",
         "@radix-ui/react-toggle": "^1.1.2",
@@ -48,11 +49,13 @@
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "concurrently": "^9.0.1",
+        "dayjs": "^1.11.13",
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^1.0",
         "lucide-react": "^0.475.0",
         "next-themes": "^0.4.6",
         "react": "^19.0.0",
+        "react-datepicker": "^8.3.0",
         "react-dom": "^19.0.0",
         "sonner": "^2.0.3",
         "tailwind-merge": "^3.0.1",
